"Inner Edge" / "Buffer Edge" options in the Double Edge Mask are wired to the wrong settings #49130

Closed
opened 2016-08-21 10:44:07 +02:00 by Ted Schundler · 5 comments
Member

See the attached screen shots, where the not behavior does not match how it is configured

Screen Shot 2016-08-21 at 1.40.55 AM.png Screen Shot 2016-08-21 at 1.42.39 AM.png

I have a patch to fix this that I will upload shortly

See the attached screen shots, where the not behavior does not match how it is configured ![Screen Shot 2016-08-21 at 1.40.55 AM.png](https://archive.blender.org/developer/F340353/Screen_Shot_2016-08-21_at_1.40.55_AM.png) ![Screen Shot 2016-08-21 at 1.42.39 AM.png](https://archive.blender.org/developer/F340355/Screen_Shot_2016-08-21_at_1.42.39_AM.png) I have a patch to fix this that I will upload shortly
Ted Schundler self-assigned this 2016-08-21 10:44:07 +02:00
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @TedSchundler

Added subscriber: @TedSchundler
Ted Schundler removed their assignment 2016-08-21 11:06:00 +02:00
Author
Member

Patch uploaded / ready for review: D2164

Patch uploaded / ready for review: [D2164](https://archive.blender.org/developer/D2164)
Sergey Sharybin was assigned by Bastien Montagne 2016-08-22 11:02:02 +02:00

This issue was referenced by 262adf7d91

This issue was referenced by 262adf7d912c8086c2a040120915d5ee72eabeb6

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49130
No description provided.