Fix T49130: "Inner Edge" / "Buffer Edge" options in the Double Edge Mask are wired to the wrong settings

Patch by Ted Schundler (tschundler), thanks!

Differential Revision: https://developer.blender.org/D2141